plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.23.0'
}

group = 'iuh.fit.se'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

spotless {
	java {
		target 'src/**/*.java' // file nào sẽ được format
		googleJavaFormat()     // format theo chuẩn Google Java Format
		// hoặc dùng eclipse formatter:
		// eclipse().configFile 'config/eclipse-java-formatter.xml'
	}
	format 'misc', {
		target '**/*.gradle', '**/*.md', '**/*.txt'
		trimTrailingWhitespace()
		endWithNewline()
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'software.amazon.awssdk:s3:2.33.7'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.20.0'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.20'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.11.6'
	implementation 'com.github.librepdf:openpdf:2.0.3'
	implementation 'org.apache.pdfbox:pdfbox:2.0.31'




}

tasks.named('test') {
	useJUnitPlatform()
}
